[ENH] Improved responsibility of the black top header strip.

--- a/5-objects/_objects.icons.scss
+++ b/5-objects/_objects.icons.scss
@@ -101,8 +101,9 @@ $ico-code-exchange:        '\e829';
 /* ===== ENTITY CODES ======================================================= */
 
 
-$code-triangle-right: '\25b8';
-$code-triangle-down:  '\25be';
+$code-triangle-right:   '\25b8';
+$code-triangle-down:    '\25be';
+$code-arrow-expand-down:'\2304';
 
 
 
