--- a/5-objects/_objects.typography.scss
+++ b/5-objects/_objects.typography.scss
@@ -157,7 +157,8 @@ $hint-inline-heading-underline-colour: darken( $heading-colour, 20 );
 .list-inline {
     > li {
         display: inline-block;
-        margin-right: 1.6em;
+        margin-right: .8em;
+        margin-left: .8em;
 
         .ico { margin-right: .2em; }
     }
