[ADD] Abstract block styling.

--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -103,6 +103,18 @@ $nm-bg-color: $grey-gallery;
 }
 
 
+
+/*===============================
+=      INTRO ABSTRACT      =
+===============================*/
+
+.abstract {
+    font-size: $h3-size;
+
+    p { max-width: 40em; }
+}
+
+
 /*===============================
 =      SUBJECT INTRO BLOCK      =
 ===============================*/
