[FIX] Adds proper specing between select2 selector and other elements, replaces bottom arrow symbol with icon, fixes placement of 'show more' within subqualifications. Lower size of the abstract in dialog.

--- a/5-objects/_objects.dialogs.scss
+++ b/5-objects/_objects.dialogs.scss
@@ -64,11 +64,12 @@ $dialog-padding:   1em;
 
 
 .dialog {
+    z-index: $z-index-top;
     overflow-y: scroll;
 
     h1 {
         margin-top: 0;
-        margin-right: 2em;
+        margin-right: 1.5em;
     }
 
     h1, h2, h3 { line-height: 1.05; }
@@ -82,7 +83,11 @@ $dialog-padding:   1em;
     };
 
     .sector.separated { border-color: #DDD; }
-    .abstract { width: 70%; }
+
+    .abstract {
+        width: 80%;
+        font-size: $h4-size;
+    }
 
     .content-simple .note {
         margin-top: .75em;
