--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -105,10 +105,10 @@ $nm-bg-color: $grey-gallery;
 
 
 /*===============================
-=      INTRO ABSTRACT      =
+=       MARKETING ABSTRACT      =
 ===============================*/
 
-.abstract {
+.promo-abstract {
     font-size: $h3-size;
 
     p { max-width: 40em; }
