--- a/6-components/_components.tooltips.scss
+++ b/6-components/_components.tooltips.scss
@@ -8,7 +8,7 @@ $tooltip-caret-size:    20px;
 #tooltip {
     position: absolute;
     font-size: .9em;
-    z-index: $z-index-middle;
+    z-index: $z-index-max;
     padding: $base-margin / 2;
     max-width: $base-width * .45;
     text-align: center;
