--- a/3-generic/_generic.print.scss
+++ b/3-generic/_generic.print.scss
@@ -73,7 +73,12 @@ $print-logo-width:          300px;
         page-break-after: avoid;
     }
 
-    #{headings( 1, 6 )} {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
         margin-left: 0 !important;
         margin-right: 0 !important;
     }
