--- a/5-objects/_objects.base.scss
+++ b/5-objects/_objects.base.scss
@@ -9,6 +9,7 @@
 @import 'objects.grid.scss';
 
 @import 'objects.typography.scss';
+@import 'objects.layout.scss';
 @import 'objects.buttons.scss';
 @import 'objects.lists.scss';
 @import 'objects.forms.scss';
