[ENH] Removes unused styles for tabbed menu on mobile devices, small UI tweaks in dialog and breadcrumbs.

--- a/5-objects/_objects.layout.scss
+++ b/5-objects/_objects.layout.scss
@@ -3,6 +3,4 @@
 ==============================================================================*/
 
 
-.footer {
-    padding: 1.75em .5em;
-}
+.footer { padding: 1.75em .5em; }
