--- a/5-objects/_objects.dialogs.scss
+++ b/5-objects/_objects.dialogs.scss
@@ -132,7 +132,7 @@ $dialog-padding:   1em;
 
     .ngdialog-close {
       position: absolute; right: 0; top: 0;
-      margin: 1em $base-margin;
+      margin: 1em 1.5em;
       padding: .5em;
       cursor: pointer;
 
