--- a/6-components/_components.degree-requirements.scss
+++ b/6-components/_components.degree-requirements.scss
@@ -5,12 +5,25 @@
 .entry-requirements {
     .form { margin-bottom: $base-margin; }
     .control-group .link-action { margin-left: .35em; }
-    .requirements-list { overflow: hidden; }
+
+    .requirements-list {
+        overflow: hidden;
+
+        @include breakpoint ( $tablet-and-bigger ) {
+            display: flex;
+            align-items: center;
+        }
+
+        > header {
+            flex: 1 1;
+            padding-right: 2em;
+        }
+    }
 
     .btn-holder {
+        text-align: center;
+
         @include breakpoint ( $tablet-and-bigger ) {
-            float: right;
-            margin-left: 2em;
 
             + header {
                 margin-top: .25em;
@@ -59,11 +72,13 @@
     background-color: $grey-gallery;
     border-left: .3em solid $grey-alto;
 
-    @include breakpoint ( $tablet-and-bigger ) {
+    @include breakpoint( $tablet-and-bigger ) {
         padding: 1.1em;
     }
 
-    h3, h4, h5 {
+    h3,
+    h4,
+    h5 {
         margin-bottom: 0;
         color: $grey-mine-shaft;
     }
@@ -82,14 +97,13 @@
         margin-top: .7em;
 
         h4 { font-size: 110%; }
+        &:last-child h4 { margin-bottom: 0; }
 
         > .list-item {
             margin-bottom: .2em;
             padding: 1em;
             background-color: $grey-alto;
         }
-
-        &:last-child h4 { margin-bottom: 0; }
     }
 
         // Move `margin-top` to the `collapsible` block to avoid animation issues
