--- a/7-trumps/_trumps.plugins.scss
+++ b/7-trumps/_trumps.plugins.scss
@@ -12,7 +12,8 @@ $select2-dropdown-border-colour: $grey-chalice;
     margin-left: .3em;
     margin-right: .3em;
 
-    .fees & {
+    .fees &,
+    .pane-controls & {
         width: auto !important;
     }
 
@@ -21,13 +22,12 @@ $select2-dropdown-border-colour: $grey-chalice;
 
     /** Selector as a standard link with a caret */
     .pane-controls & {
-        vertical-align: sub;
         max-width: 100%;
 
         .select2-selection--single {
             position: relative;     // Resetting caret's vertical position
             height: auto;
-            margin-bottom: .35em;   // Push dropdown down
+            margin-bottom: 0;   // Push dropdown down
             border: 0;
             background-color: transparent;
             color: $link-colour;
